2007-01-31: Fixed build problem on x86_64: added -fPIC flag to compilation
            of C-stubs.

2007-01-17: Complete rewrite by Markus Mottl <markus.mottl@gmail.com>.

2005-04-??: Initial coding (0.1) by
            Christian Szegedy <csdontspam871@metamatix.org>.